force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/AiAgentInteractionStepId__c.field-meta.xml
<CustomField>
    <fullName>AiAgentInteractionStepId__c</fullName>
    <label>AI Agent Interaction Step</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AI Agent Interaction Step</labelOverride>
        <masterLabel>AI Agent Interaction Step</masterLabel>
        <refAttrDeveloperName>AiAgentInteractionStepId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>