force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/CauseLogId__c.field-meta.xml
<CustomField>
    <fullName>CauseLogId__c</fullName>
    <label>Cause Log</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Cause Log</labelOverride>
        <masterLabel>Cause Log</masterLabel>
        <refAttrDeveloperName>CauseLogId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>