force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/DetailedDescription__c.field-meta.xml
<CustomField>
    <fullName>DetailedDescription__c</fullName>
    <label>Detailed Description</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Detailed Description</labelOverride>
        <masterLabel>Detailed Description</masterLabel>
        <refAttrDeveloperName>DetailedDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>