force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>AI Agent Session Log Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AI Agent Session Log Id</labelOverride>
        <masterLabel>AI Agent Session Log Id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <refAttrDeveloperName>Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>