force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/KQ_CauseLogId__c.field-meta.xml
<CustomField>
    <fullName>KQ_CauseLogId__c</fullName>
    <label>Key Qualifier Cause Log</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Cause Log</labelOverride>
        <masterLabel>Key Qualifier Cause Log</masterLabel>
        <refAttrDeveloperName>KQ_CauseLogId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>