force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/KQ_RootCauseLogId__c.field-meta.xml
<CustomField>
    <fullName>KQ_RootCauseLogId__c</fullName>
    <label>Key Qualifier Root Cause Log</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Root Cause Log</labelOverride>
        <masterLabel>Key Qualifier Root Cause Log</masterLabel>
        <refAttrDeveloperName>KQ_RootCauseLogId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>