force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/LogDateTime__c.field-meta.xml
<CustomField>
    <fullName>LogDateTime__c</fullName>
    <label>Log Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Log Date Time</labelOverride>
        <masterLabel>Log Date Time</masterLabel>
        <refAttrDeveloperName>LogDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>