force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/LogLevelType__c.field-meta.xml
<CustomField>
    <fullName>LogLevelType__c</fullName>
    <label>Log Level Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Log Level Type</labelOverride>
        <masterLabel>Log Level Type</masterLabel>
        <refAttrDeveloperName>LogLevelType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>