force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/rel_1788162156643_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1788162156643_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AiAgentSessionLog_std_AiAgentInterac_rel</label>
    <referenceTo>ssot__AiAgentInteraction__dlm</referenceTo>
    <relationshipLabel>AiAgentSessionLog_std_AiAgentInterac_rel</relationshipLabel>
    <relationshipName>rel_1788162156643_end</relationshipName>
    <type>Lookup</type>
</CustomField>