force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/RootCauseLogId__c.field-meta.xml
<CustomField>
    <fullName>RootCauseLogId__c</fullName>
    <label>Root Cause Log</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Root Cause Log</labelOverride>
        <masterLabel>Root Cause Log</masterLabel>
        <refAttrDeveloperName>RootCauseLogId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>