force-app/main/default/objects/AiAgentSessionLog_std__dlm/fields/TelemetryTrace__c.field-meta.xml
<CustomField>
    <fullName>TelemetryTrace__c</fullName>
    <label>Telemetry Trace</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Telemetry Trace</labelOverride>
        <masterLabel>Telemetry Trace</masterLabel>
        <refAttrDeveloperName>TelemetryTrace</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>